# QUnitConversion

./: .gitignore  CMakeLists.txt  README.md  index.html
.github/workflows/: build.yml
src/: CMakeLists.txt  qaliasdictionary.h  qaliasdictionary_tests.cpp  qlinearfunction.cpp  qlinearfunction.h  qlinearfunction_tests.cpp  qunitconversionfamily.h  qunitconversionrule.h  qunitconvertor.h
tests/: CMakeLists.txt  qunitconvertor_tests.cpp
